<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grayLight"
              android:orientation="vertical"
              tools:context="cn.ws.sz.fragment.HomeFragment">

    <include layout="@layout/title_search_bar"></include>

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--广告轮播-->

            <fragment
                android:id="@+id/fragment_banner_content"
                android:name="cn.ws.sz.fragment.BannerFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></fragment>


            <!--八大分类-->
            <LinearLayout
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_food"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/food"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/supermarket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_supermarket"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/supermarket"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/entertainment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_entertainment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/entertainment"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/life"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_life"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/life"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/wholesale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_wholesale"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/wholesale"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/business"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_business"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/business"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/education"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_education"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/education"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/car"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@mipmap/icon_home_car"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/car"
                        android:textColor="#828282"
                        android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>

            <!--热门商家 广告 小广播-->

            <RelativeLayout
                android:id="@+id/rlNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/ivNotice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:src="@mipmap/icon_home_notice"/>

                <cn.ws.sz.view.MarqueeTextView
                    android:id="@+id/tvNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/ivNotice"
                    android:clickable="true"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="-1"
                    android:singleLine="true"
                    android:text="@string/hot_ad"
                    android:textColor="@color/black">
                </cn.ws.sz.view.MarqueeTextView>
            </RelativeLayout>

            <!--热门商家-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/icon_home_more"
                    android:padding="5dp"
                    android:text="热门商家"
                    android:textColor="@color/text_red"/>

                <cn.ws.sz.view.MyGridView
                    android:id="@+id/gvHot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:horizontalSpacing="10dp"
                    android:numColumns="2"
                    android:padding="5dp"
                    android:scrollbars="none"
                    android:verticalSpacing="3dp">
                </cn.ws.sz.view.MyGridView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>